--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift</h1>
+            <h1><strong>Welcome to your CUSTOM Node.js application on OpenShift</strong></h1>
           </hgroup>
 
 
